about section done

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </nav>
-        <hr>
+        <hr class="text-white opacity-10">
     </header>
 
     <main>
@@ -92,9 +92,47 @@
                 </div>
             </div>
         </section>
-        <section>
 
+        <!-- // about section  -->
+        <section class="bg-[#1A0B2E]">
+            <div class="about-content pb-[120px]">
+                <h1 class="text-white text-[48px] font-bold text-center">About the Podcast</h1>
+                <p class="text-white text-center text-[16px]/[24px] opacity-80 pt-4 pb-[80px]">TechWave is your go-to
+                    podcast for staying ahead in
+                    the fast-paced world of technology. <br>
+                    We break down complex topics into digestible insights, explore productivity strategies that actually
+                    work, <br>
+                    and share stories of personal growth from industry leaders. <br><br>
+
+                    Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+
+
+                <hr class="mb-20 text-white opacity-10">
+
+
+
+                <div class="flex justify-between ">
+                    <div>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
+                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                    </div>
+                    <div>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
+                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                    </div>
+                    <div>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
+                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                    </div>
+                    <div>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
+                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                    </div>
+                </div>
+            </div>
         </section>
+
+
         <section>
 
         </section>
