--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="flex justify-center gap-2 pb-[100px]">
                         <button
-                            class="text-white font-semibold  px-5 py-3 rounded-[20px] cursor-pointer bg-gradient-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100"><i
+                            class="text-white font-semibold  px-5 py-3 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100"><i
                                 class="fa-brands fa-spotify"></i> Listen on Spotify</button>
                         <button
                             class="text-[#00FF88] border rounded-[20px] cursor-pointer px-5 py-3 bg-transparent"><img
@@ -132,8 +132,49 @@
             </div>
         </section>
 
+        <!-- // why choose section  -->
+        <section class="  bg-[#230E3D]">
+            <div class="why-choose pb-[120px]">
+                <h1 class="text-white text-[48px] text-center pt-[120px] pb-10 font-bold"> Why Choose TechWave</h1>
 
-        <section>
+                <div class="choose-content grid grid-cols-3 gap-[30px]">
+                    <div class="bg-[#351165] px-10 py-[100px] rounded-[40px] row-span-2">
+                        <img src="./assets/headphone.png" alt="">
+                        <h2 class="text-white text-[24px] font-bold py-4 ">Premium Audio Quality</h2>
+                        <p class="text-white text-[16px]/[24px] opacity-60 ">Experience crystal-clear sound with
+                            professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.</p>
+                    </div>
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2">
+                        <img src="./assets/device.png" alt="">
+                        <h2 class="text-white text-[24px] font-bold py-4 ">Mobile Friendly</h2>
+                        <p class="text-white text-[16px]/[24px] opacity-60 ">Listen on the go with seamless mobile
+                            experience and offline downloads.</p>
+                    </div>
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2">
+                        <img src="./assets/location.png" alt="">
+                        <h2 class="text-white text-[24px] font-bold py-4 ">Global Community</h2>
+                        <p class="text-white text-[16px]/[24px] opacity-60 ">Connect with tech enthusiasts from over 120
+                            countries worldwide.</p>
+                    </div>
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2">
+                        <img src="./assets/energy.png" alt="">
+                        <h2 class="text-white text-[24px] font-bold py-4 ">Exclusive Interviews</h2>
+                        <p class="text-white text-[16px]/[24px] opacity-60 ">Get unprecedented access to industry
+                            titans, startup founders, and tech visionaries. Our host secures exclusive conversations you
+                            won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+                        </p>
+                    </div>
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px]">
+                        <img src="./assets/resource.png" alt="">
+                        <h2 class="text-white text-[24px] font-bold py-4 ">Rich Resources</h2>
+                        <p class="text-white text-[16px]/[24px] opacity-60 ">Access show notes, transcripts, and
+                            additional learning materials for every episode.</p>
+                    </div>
+                </div>
+            </div>
+
 
         </section>
     </main>
