--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
 
                 <div class="flex justify-between ">
                     <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold text-center">150K+</h1>
                         <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
                     </div>
                     <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
-                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold text-center">200+</h1>
+                        <p class="text-white text-[16px]/[24px] ">Episodes Published</p>
                     </div>
                     <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
-                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold text-center">4.9 ★</h1>
+                        <p class="text-white text-[16px]/[24px] ">Average Rating</p>
                     </div>
                     <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold">150K+</h1>
-                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                        <h1 class="text-[#00FF88] text-[48px] font-bold text-center">50+</h1>
+                        <p class="text-white text-[16px]/[24px] ">Industry Experts</p>
                     </div>
                 </div>
             </div>
@@ -174,8 +174,113 @@
                     </div>
                 </div>
             </div>
+        </section>
 
 
+        <!-- Featured Episodes Section  -->
+        <section class="bg-[#1A0B2E]">
+            <div class="feature py-[120px]">
+                <h1 class="text-white text-[48px] text-center  pb-10 font-bold">Featured Episodes</h1>
+
+                <div class="grid grid-cols-3 gap-[30px]">
+                    <div class="bg-[#250D44] rounded-[15px]">
+                        <iframe width="380" height="214" class="rounded-t-[15px]"
+                            src="https://www.youtube.com/embed/1IxG7ywSNXk?si=y9w1fnnXZLgHfdj3"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="py-6 px-6">
+                            <h2 class="text-white text-[24px]   pb-3 font-bold">The Future of AI in Everyday
+                                Life</h2>
+                            <p class="text-white text-[16px]/[24px] opacity-60 pb-3">Exploring how artificial
+                                intelligence is
+                                transforming our daily routines and what to
+                                expect
+                                in the next decade.</p>
+
+                            <div class="flex items-center gap-1.5">
+                                <img src="./assets/clock.png" alt="">
+                                <strong class="text-[#00FF88] text-[16px]/[24px] font-semibold">42 min</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-[#250D44] rounded-[15px]">
+                        <iframe width="380" height="214"
+                            src="https://www.youtube.com/embed/MPXXmeW7dHI?si=keY2DpAcBXhg1eHE"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="py-6 px-6">
+                            <h2 class="text-white text-[24px]   pb-3 font-bold">Building Better Habits for Remote Work
+                            </h2>
+                            <p class="text-white text-[16px]/[24px] opacity-60 pb-3">Practical strategies for staying
+                                productive and maintaining work-life balance in a remote environment.</p>
+
+                            <div class="flex items-center gap-1.5">
+                                <img src="./assets/clock.png" alt="">
+                                <strong class="text-[#00FF88] text-[16px]/[24px] font-semibold">65 min</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-[#250D44] rounded-[15px]">
+                        <iframe width="380" height="214"
+                            src="https://www.youtube.com/embed/oX7OduG1YmI?si=WY5rfJ8CvhulrsNd"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="py-6 px-6">
+                            <h2 class="text-white text-[24px]   pb-3 font-bold">Career Growth in Tech: A Roadmap</h2>
+                            <p class="text-white text-[16px]/[24px] opacity-60 pb-3">Expert advice on navigating your
+                                tech career from junior developer to senior leadership roles.</p>
+
+                            <div class="flex items-center gap-1.5">
+                                <img src="./assets/clock.png" alt="">
+                                <strong class="text-[#00FF88] text-[16px]/[24px] font-semibold">37 min</strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Meet the HOSt Section  -->
+        <section class="bg-[#1A0B2E]">
+            <div class="host-section pb-[120px]">
+                <h1 class="text-white text-center text-[48px] font-bold pb-10">Meet the Host</h1>
+
+                <div class="flex gap-6 bg-[#351165] px-10 py-10 rounded-[40px] ">
+                    <div>
+                        <img class="w-[400px] " src="./assets/host.png" alt="host photo">
+                    </div>
+                    <div>
+                        <h1 class="text-white text-[32px] font-bold">Alex Kumar</h1>
+                        <p class="text-white text-[16px]/[24px] opacity-60">Tech entrepreneur, productivity expert, and
+                            lifelong learner. Alex has been in the tech
+                            industry for over 10 years, working with startups and Fortune 500 companies. Through
+                            TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
+                            to grow in tech.</p>
+
+                        <div class="flex gap-2 pt-4">
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                                <img src="./assets/linkedin.png" alt="instragram">
+                            </div>
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                                <img src="./assets/x.png" alt="x">
+                            </div>
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                                <img src="./assets/instagram.png" alt="">
+                            </div>
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                                <img src="./assets/youtube.png" alt="">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
