footer section done

--- a/index.html
+++ b/index.html
@@ -282,6 +282,40 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- Footer Section  -->
+        <footer>
+            <div class="pt-[120px] pb-[120px] text-center">
+                <div class="flex justify-center">
+                    <img class="w-[400px]" src="./assets/TechWave.png" alt="">
+                </div>
+
+
+                <div class="flex justify-center gap-10 pt-8 pb-8">
+                    <div class="flex gap-2.5">
+                        <img src="./assets/spotify.png" alt="">
+                        <p class="text-white text-[16px] font-medium opacity-60">Spotify</p>
+                    </div>
+                    <div class="flex gap-2.5">
+                        <img src="./assets/apple-podcast.png" alt="">
+                        <p class="text-white text-[16px] font-medium opacity-60">Apple Podcasts</p>
+                    </div>
+                    <div class="flex gap-2.5">
+                        <img src="./assets/youtube.png" alt="">
+                        <p class="text-white text-[16px] font-medium opacity-60">YouTube</p>
+                    </div>
+                    <div class="flex gap-2.5">
+                        <img src="./assets/twitter.png" alt="">
+                        <p class="text-white text-[16px] font-medium opacity-60">Twitter</p>
+                    </div>
+                </div>
+
+                <div>
+                    <p class="text-white text-[16px]  opacity-60">&copy; 2026 TechWave Podcast. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
