--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="bg-[#412567]">
 
         <!-- Navbar section  -->
-        <nav class="w-[1200px]  flex justify-between py-6 mx-auto ">
+        <nav class="navbar  flex justify-between py-6 mx-auto ">
             <!-- <div class="text-white text-5xl font-bold">
                 <span>Tech </span><span class="text-[#FB09B4] ">Wave</span>
             </div> -->
@@ -56,13 +56,13 @@
             <!-- navbar button  -->
             <div class="nav-btn">
                 <button
-                    class="text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-gradient-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100">Subscribe
+                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-gradient-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100">Subscribe
                     <i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
-            <div>
-                <img class="hamburger-menu" src="./assets/hamburger-menu.png" alt="">
-            </div>
+
+            <img class="hamburger-menu" src="./assets/hamburger-menu.png" alt="">
+
 
 
         </nav>
@@ -113,27 +113,28 @@
                     Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
 
 
-                <hr class="mb-20 text-white opacity-10">
+                <hr class=" text-white opacity-10">
+            </div>
+        </section>
 
-
-
-                <div class="grid grid-cols-4 justify-between  count">
-                    <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold ">150K+</h1>
-                        <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
-                    </div>
-                    <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold ">200+</h1>
-                        <p class="text-white text-[16px]/[24px] ">Episodes Published</p>
-                    </div>
-                    <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold ">4.9 ★</h1>
-                        <p class="text-white text-[16px]/[24px] ">Average Rating</p>
-                    </div>
-                    <div>
-                        <h1 class="text-[#00FF88] text-[48px] font-bold ">50+</h1>
-                        <p class="text-white text-[16px]/[24px] ">Industry Experts</p>
-                    </div>
+        <!-- count section  -->
+        <section class="bg-[#1A0B2E] pb-20">
+            <div class="grid grid-cols-4 justify-between  count">
+                <div class="text-center">
+                    <h1 class="text-[#00FF88] text-[48px] font-bold ">150K+</h1>
+                    <p class="text-white text-[16px]/[24px] ">Monthly Listeners</p>
+                </div>
+                <div class="text-center">
+                    <h1 class="text-[#00FF88] text-[48px] font-bold ">200+</h1>
+                    <p class="text-white text-[16px]/[24px] ">Episodes Published</p>
+                </div>
+                <div class="text-center">
+                    <h1 class="text-[#00FF88] text-[48px] font-bold ">4.9 ★</h1>
+                    <p class="text-white text-[16px]/[24px] ">Average Rating</p>
+                </div>
+                <div class="text-center">
+                    <h1 class="text-[#00FF88] text-[48px] font-bold ">50+</h1>
+                    <p class="text-white text-[16px]/[24px] ">Industry Experts</p>
                 </div>
             </div>
         </section>
@@ -294,26 +295,32 @@
         <footer>
             <div class="pt-[120px] pb-[120px] text-center">
                 <div class="flex justify-center">
-                    <img class="w-[400px]" src="./assets/TechWave.png" alt="">
+                    <img class="w-[400px] footer-img" src="./assets/TechWave.png" alt="">
                 </div>
 
 
-                <div class="flex justify-center gap-10 pt-8 pb-8">
-                    <div class="flex gap-2.5">
-                        <img src="./assets/spotify.png" alt="">
-                        <p class="text-white text-[16px] font-medium opacity-60">Spotify</p>
+                <div class="flex justify-center gap-10 pt-8 pb-8 footer-icon">
+
+                    <div class="flex gap-10">
+                        <div class="flex gap-2.5">
+                            <img src="./assets/spotify.png" alt="">
+                            <p class="text-white text-[16px] font-medium opacity-60">Spotify</p>
+                        </div>
+                        <div class="flex gap-2.5">
+                            <img src="./assets/apple-podcast.png" alt="">
+                            <p class="text-white text-[16px] font-medium opacity-60">Apple Podcasts</p>
+                        </div>
                     </div>
-                    <div class="flex gap-2.5">
-                        <img src="./assets/apple-podcast.png" alt="">
-                        <p class="text-white text-[16px] font-medium opacity-60">Apple Podcasts</p>
-                    </div>
-                    <div class="flex gap-2.5">
-                        <img src="./assets/youtube.png" alt="">
-                        <p class="text-white text-[16px] font-medium opacity-60">YouTube</p>
-                    </div>
-                    <div class="flex gap-2.5">
-                        <img src="./assets/twitter.png" alt="">
-                        <p class="text-white text-[16px] font-medium opacity-60">Twitter</p>
+
+                    <div class="flex gap-10">
+                        <div class="flex gap-2.5">
+                            <img src="./assets/youtube-podcast.png" alt="">
+                            <p class="text-white text-[16px] font-medium opacity-60">YouTube</p>
+                        </div>
+                        <div class="flex gap-2.5">
+                            <img src="./assets/twitter.png" alt="">
+                            <p class="text-white text-[16px] font-medium opacity-60">Twitter</p>
+                        </div>
                     </div>
                 </div>
 
