mobile responsive done

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <!-- nav menu  -->
             <div class="flex items-center nav-menu ">
                 <ul class="flex">
-                    <li class="mr-8 text-white font-medium hover:text-[#FB09B4] hover:font-bold"> <a href="">About</a>
+                    <li class="mr-8 text-white font-medium  hover:font-bold"> <a href="">About</a>
                     </li>
-                    <li class="mr-8 text-white font-medium hover:text-[#FB09B4] hover:font-bold"> <a
+                    <li class="mr-8 text-white font-medium  hover:font-bold"> <a
                             href="">Episodes</a></li>
-                    <li class="mr-8 text-white font-medium hover:text-[#FB09B4] hover:font-bold"> <a href="">Host</a>
+                    <li class="mr-8 text-white font-medium  hover:font-bold"> <a href="">Host</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
             <!-- navbar button  -->
             <div class="nav-btn">
                 <button
-                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-gradient-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100">Subscribe
+                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-gradient-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100 choose-content">Subscribe
                     <i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
@@ -72,13 +72,13 @@
     <main>
         <!-- hero / banner section  -->
         <section class="h-[760px]">
-            <div class="banner-container">
+            <div class="banner-container pb-[80px]">
                 <div class="flex justify-center items-center pt-[100px]">
                     <img class="relative" src="./assets/hero-circle.png" alt="microphone bg img">
                     <img class="absolute" src="./assets/microphone.png" alt="microphone img">
 
                     <button
-                        class="absolute text-[#1A0B2E] bg-[#00FF88] font-semibold rounded-[20px] py-2 px-4 -mt-[300px] -mr-[220px]">NEW</button>
+                        class="absolute text-[#1A0B2E] bg-[#00FF88] font-semibold rounded-[20px] py-2 px-4 -mt-[300px] -mr-[220px] badge">NEW</button>
                 </div>
 
 
@@ -92,7 +92,7 @@
                             class="text-white font-semibold  px-5 py-3 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100"><i
                                 class="fa-brands fa-spotify"></i> Listen on Spotify</button>
                         <button
-                            class="text-[#00FF88] border rounded-[20px] cursor-pointer px-5 py-3 bg-transparent"><img
+                            class="text-[#00FF88] border rounded-[20px] cursor-pointer px-5 py-3 bg-transparent "><img
                                 class="inline pr-2" src="./assets/message.png" alt="">Subscribe</button>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
 
         <!-- // about section  -->
         <section class="bg-[#1A0B2E]">
-            <div class="about-content pb-[120px]">
+            <div class="about-content pb-[120px] pt-[50px]">
                 <h1 class="text-white text-[48px] font-bold text-center">About the Podcast</h1>
                 <p class="text-white text-center text-[16px]/[24px] opacity-80 pt-4 pb-[80px]">TechWave is your go-to
                     podcast for staying ahead in
@@ -153,19 +153,19 @@
                             engineering. Every episode is mastered for optimal listening across all devices and
                             platforms.</p>
                     </div>
-                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2">
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2 choose-content">
                         <img src="./assets/device.png" alt="">
                         <h2 class="text-white text-[24px] font-bold py-4 ">Mobile Friendly</h2>
                         <p class="text-white text-[16px]/[24px] opacity-60 ">Listen on the go with seamless mobile
                             experience and offline downloads.</p>
                     </div>
-                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2">
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2 choose-content">
                         <img src="./assets/location.png" alt="">
                         <h2 class="text-white text-[24px] font-bold py-4 ">Global Community</h2>
                         <p class="text-white text-[16px]/[24px] opacity-60 ">Connect with tech enthusiasts from over 120
                             countries worldwide.</p>
                     </div>
-                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2">
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] col-span-2 choose-content">
                         <img src="./assets/energy.png" alt="">
                         <h2 class="text-white text-[24px] font-bold py-4 ">Exclusive Interviews</h2>
                         <p class="text-white text-[16px]/[24px] opacity-60 ">Get unprecedented access to industry
@@ -173,7 +173,7 @@
                             won't find anywhere else, diving deep into their journeys, failures, and success strategies.
                         </p>
                     </div>
-                    <div class="bg-[#351165] px-10 py-10 rounded-[40px]">
+                    <div class="bg-[#351165] px-10 py-10 rounded-[40px] choose-content">
                         <img src="./assets/resource.png" alt="">
                         <h2 class="text-white text-[24px] font-bold py-4 ">Rich Resources</h2>
                         <p class="text-white text-[16px]/[24px] opacity-60 ">Access show notes, transcripts, and
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="bg-[#250D44] rounded-[15px]">
-                        <iframe width="380" height="214"
+                        <iframe width="380" height="214" class="rounded-t-[15px]"
                             src="https://www.youtube.com/embed/MPXXmeW7dHI?si=keY2DpAcBXhg1eHE"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     <div class="bg-[#250D44] rounded-[15px]">
-                        <iframe width="380" height="214"
+                        <iframe width="380" height="214" class="rounded-t-[15px]"
                             src="https://www.youtube.com/embed/oX7OduG1YmI?si=WY5rfJ8CvhulrsNd"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -271,16 +271,16 @@
                             to grow in tech.</p>
 
                         <div class="flex gap-2 pt-4 host-icon">
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/linkedin.png" alt="instragram">
                             </div>
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/x.png" alt="x">
                             </div>
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/instagram.png" alt="">
                             </div>
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5">
+                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/youtube.png" alt="">
                             </div>
 
@@ -302,22 +302,22 @@
                 <div class="flex justify-center gap-10 pt-8 pb-8 footer-icon">
 
                     <div class="flex gap-10">
-                        <div class="flex gap-2.5">
+                        <div class="flex gap-2.5 cursor-pointer">
                             <img src="./assets/spotify.png" alt="">
                             <p class="text-white text-[16px] font-medium opacity-60">Spotify</p>
                         </div>
-                        <div class="flex gap-2.5">
+                        <div class="flex gap-2.5 cursor-pointer">
                             <img src="./assets/apple-podcast.png" alt="">
                             <p class="text-white text-[16px] font-medium opacity-60">Apple Podcasts</p>
                         </div>
                     </div>
 
                     <div class="flex gap-10">
-                        <div class="flex gap-2.5">
+                        <div class="flex gap-2.5 cursor-pointer">
                             <img src="./assets/youtube-podcast.png" alt="">
                             <p class="text-white text-[16px] font-medium opacity-60">YouTube</p>
                         </div>
-                        <div class="flex gap-2.5">
+                        <div class="flex gap-2.5 cursor-pointer">
                             <img src="./assets/twitter.png" alt="">
                             <p class="text-white text-[16px] font-medium opacity-60">Twitter</p>
                         </div>
