Eveything is all ok

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
 
         <!-- Navbar section  -->
         <nav class="navbar  flex justify-between py-6 mx-auto ">
-            <!-- <div class="text-white text-5xl font-bold">
-                <span>Tech </span><span class="text-[#FB09B4] ">Wave</span>
-            </div> -->
             <div>
                 <img src="assets/TechWave.png" alt="logo">
             </div>
@@ -46,8 +43,7 @@
                 <ul class="flex">
                     <li class="mr-8 text-white font-medium  hover:font-bold"> <a href="">About</a>
                     </li>
-                    <li class="mr-8 text-white font-medium  hover:font-bold"> <a
-                            href="">Episodes</a></li>
+                    <li class="mr-8 text-white font-medium  hover:font-bold"> <a href="">Episodes</a></li>
                     <li class="mr-8 text-white font-medium  hover:font-bold"> <a href="">Host</a>
                     </li>
                 </ul>
@@ -56,7 +52,7 @@
             <!-- navbar button  -->
             <div class="nav-btn">
                 <button
-                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-gradient-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100 choose-content">Subscribe
+                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100 choose-content">Subscribe
                     <i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
@@ -72,13 +68,13 @@
     <main>
         <!-- hero / banner section  -->
         <section class="h-[760px]">
-            <div class="banner-container pb-[80px]">
-                <div class="flex justify-center items-center pt-[100px]">
+            <div class="banner-container pb-20">
+                <div class="flex justify-center items-center pt-[100px] mic-container">
                     <img class="relative" src="./assets/hero-circle.png" alt="microphone bg img">
                     <img class="absolute" src="./assets/microphone.png" alt="microphone img">
 
                     <button
-                        class="absolute text-[#1A0B2E] bg-[#00FF88] font-semibold rounded-[20px] py-2 px-4 -mt-[300px] -mr-[220px] badge">NEW</button>
+                        class="absolute  text-[#1A0B2E] bg-[#00FF88] font-semibold rounded-[20px] py-2 px-4 -mt-[300px] -mr-[220px] badge">NEW</button>
                 </div>
 
 
@@ -103,7 +99,7 @@
         <section class="bg-[#1A0B2E]">
             <div class="about-content pb-[120px] pt-[50px]">
                 <h1 class="text-white text-[48px] font-bold text-center">About the Podcast</h1>
-                <p class="text-white text-center text-[16px]/[24px] opacity-80 pt-4 pb-[80px]">TechWave is your go-to
+                <p class="text-white text-center text-[16px]/[24px] opacity-80 pt-4 pb-20">TechWave is your go-to
                     podcast for staying ahead in
                     the fast-paced world of technology. <br>
                     We break down complex topics into digestible insights, explore productivity strategies that actually
@@ -271,16 +267,20 @@
                             to grow in tech.</p>
 
                         <div class="flex gap-2 pt-4 host-icon">
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
+                            <div
+                                class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/linkedin.png" alt="instragram">
                             </div>
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
+                            <div
+                                class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/x.png" alt="x">
                             </div>
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
+                            <div
+                                class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/instagram.png" alt="">
                             </div>
-                            <div class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
+                            <div
+                                class="border-3 border-[#533C72] rounded-[50%] py-2.5 px-2.5 cursor-pointer hover:bg-[#351156]">
                                 <img src="./assets/youtube.png" alt="">
                             </div>
 
