animation problem solved

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- navbar button  -->
             <div class="nav-btn">
                 <button
-                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100 choose-content">Subscribe
+                    class=" text-white font-semibold  px-3 py-4 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100 badge">Subscribe
                     <i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
@@ -85,10 +85,10 @@
 
                     <div class="flex justify-center gap-2 pb-[100px]">
                         <button
-                            class="text-white font-semibold  px-5 py-3 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100"><i
+                            class="text-white font-semibold  px-5 py-3 rounded-[20px] cursor-pointer bg-linear-to-r from-[#F7E93F] from-0% via-[#FB09B4] via-51% to-[#9100F8] to-100 badge"><i
                                 class="fa-brands fa-spotify"></i> Listen on Spotify</button>
                         <button
-                            class="text-[#00FF88] border rounded-[20px] cursor-pointer px-5 py-3 bg-transparent "><img
+                            class="text-[#00FF88] border rounded-[20px] cursor-pointer px-5 py-3 bg-transparent badge"><img
                                 class="inline pr-2" src="./assets/message.png" alt="">Subscribe</button>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                 <h1 class="text-white text-[48px] text-center  pb-10 font-bold">Featured Episodes</h1>
 
                 <div class="grid grid-cols-3 gap-[30px] feature-content">
-                    <div class="bg-[#250D44] rounded-[15px]">
+                    <div class="bg-[#250D44] rounded-[15px] badge">
                         <iframe width="380" height="214" class="rounded-t-[15px]"
                             src="https://www.youtube.com/embed/1IxG7ywSNXk?si=y9w1fnnXZLgHfdj3"
                             title="YouTube video player" frameborder="0"
@@ -208,7 +208,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bg-[#250D44] rounded-[15px]">
+                    <div class="bg-[#250D44] rounded-[15px] badge">
                         <iframe width="380" height="214" class="rounded-t-[15px]"
                             src="https://www.youtube.com/embed/MPXXmeW7dHI?si=keY2DpAcBXhg1eHE"
                             title="YouTube video player" frameborder="0"
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bg-[#250D44] rounded-[15px]">
+                    <div class="bg-[#250D44] rounded-[15px] badge">
                         <iframe width="380" height="214" class="rounded-t-[15px]"
                             src="https://www.youtube.com/embed/oX7OduG1YmI?si=WY5rfJ8CvhulrsNd"
                             title="YouTube video player" frameborder="0"
